tracing with btrace